--- a/MDK-ARM/DeCubeMX_Lib.uvprojx
+++ b/MDK-ARM/DeCubeMX_Lib.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>DeCubeMX_Lib</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pArmCC>6160000::V6.16::ARMCLANG</pArmCC>
-      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
+      <pArmCC>6180000::V6.18::ARMCLANG</pArmCC>
+      <pCCUsed>6180000::V6.18::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -187,6 +187,7 @@
             <RvdsVP>2</RvdsVP>
             <RvdsMve>0</RvdsMve>
             <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -668,9 +669,14 @@
               <FilePath>..\Xross_Lib\Src\rcc.c</FilePath>
             </File>
             <File>
-              <FileName>common.h</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Xross_Lib\Inc\common.h</FilePath>
+              <FileName>rcc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Xross_Lib\Inc\rcc.h</FilePath>
+            </File>
+            <File>
+              <FileName>headfile.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Xross_Lib\Inc\headfile.h</FilePath>
             </File>
           </Files>
         </Group>
